--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             </form>
             <div class="row">
                 <div class="col-auto">
-                    <button class="text-decoration-none" onclick="showTasks('всі')">Всі</button>
+                    <button class="text-decoration-none" onclick="showTasks('All')">All</button>
                 </div>
                 <div class="col-auto">
-                    <button class="text-decoration-none" onclick="showTasks('завершені')">Заверешені</button>
+                    <button class="text-decoration-none" onclick="showTasks('Completed')">Completed</button>
                 </div>
                 <div class="col-auto">
-                    <button class="text-decoration-none" onclick="showTasks('незавершені')">Незавершені</button>
+                    <button class="text-decoration-none" onclick="showTasks('Active')">Active</button>
                 </div>
             </div>
             <div class="todo-list"></div>
